[GTK] Some event tests failing after r230817 https://bugs.webkit.org/show_bug.cgi?id=185072

Reviewed by Michael Catanzaro.

Source/WebKit:

Do not send mouse move events to the WebProcess for crossing events during testing. WTR never generates crossing
events and they can confuse tests.

Fixes: editing/pasteboard/drag-link-with-data-transfer-adds-trusted-link-to-pasteboard.html
       fast/css/user-drag-none.html
       fast/events/context-activated-by-key-event.html
       fast/events/drag-selects-image.html
       fast/events/dropzone-005.html
       fast/events/mouse-click-events.html
       fast/events/mouse-cursor-change.html

* UIProcess/API/gtk/WebKitWebViewBase.cpp:
(webkitWebViewBaseCrossingNotifyEvent):

LayoutTests:

Remove expectations for tests that are passing now.

* platform/gtk/TestExpectations:

Canonical link: https://commits.webkit.org/200782@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231349 268f45cc-cd09-0410-ab3c-d52691b4dbfc